objects/bofc__BOFC_Object_Picklist__c.object
<CustomObject>
    <fields>
        <fullName>bofc__BOFCOBFieldsDetails__c</fullName>
        <label>BOFCOBFieldsDetails</label>
        <referenceTo>bofc__BOFCOBFieldsDetails__c</referenceTo>
        <relationshipLabel>BOFC Object Picklists</relationshipLabel>
        <relationshipName>BOFC_Object_Picklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bofc__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Order_by__c</fullName>
        <label>Order by</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Pickist_Name__c</fullName>
        <label>Pickist Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Picklist_Value_Long__c</fullName>
        <label>Picklist Value Long</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Picklist_Value__c</fullName>
        <label>Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BOFC Object Picklist</label>
    <nameField>
        <label>BOFC Object Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFC Object Picklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>